--- a/model/bert_train.ipynb
+++ b/model/bert_train.ipynb
@@ -21,8 +21,10 @@
     "import yaml\n",
     "import wandb\n",
     "from torch import cuda\n",
+    "from datetime import datetime\n",
     "from transformers import pipeline\n",
-    "from utils.data_utils import read_data, filter_fallacies, encode_labels, plot_training_curve, get_file_name,plot_learning_curve\n",
+    "from utils.data_utils import read_data, filter_fallacies, encode_labels, plot_training_curve, get_file_name, \\\n",
+    "    plot_learning_curve\n",
     "from transformers import BertForSequenceClassification\n",
     "from transformers import TrainingArguments, Trainer\n",
     "from model.BERT import compute_metrics_wandb, DataLoader\n",
@@ -52,8 +54,6 @@
    },
    "cell_type": "code",
    "source": [
-    "from datetime import datetime\n",
-    "\n",
     "# Load configuration file\n",
     "with open('../config.yaml', 'r') as file:\n",
     "    config = yaml.safe_load(file)\n",
@@ -203,8 +203,7 @@
     "logical_fallacies = ['faulty generalization', 'intentional', 'nonfallacies', 'ad hominem', 'appeal to emotion']\n",
     "fil_train_data, fil_test_data, fil_dev_data = filter_fallacies(train_dataset, test_dataset, dev_dataset,\n",
     "                                                               logical_fallacies)\n",
-    "fil_train_data.head()\n",
-    "\n"
+    "fil_train_data.head()"
    ],
    "id": "a254ebd9e10ca200",
    "outputs": [],
@@ -424,7 +423,9 @@
     "    per_device_eval_batch_size=config['model']['params']['eval_batch_size'],\n",
     "    num_train_epochs=config['model']['params']['epochs'],\n",
     "    weight_decay=0.01,\n",
-    "    log_level=\"warning\"\n",
+    "    max_grad_norm=1.0,\n",
+    "    log_level=\"warning\",\n",
+    "    load_best_model_at_end=True\n",
     ")\n",
     "\n",
     "trainer = Trainer(\n",
@@ -471,20 +472,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "import winsound\n",
-    "frequency = 2500  # Set Frequency To 2500 Hertz\n",
-    "duration = 1000  # Set Duration To 1000 ms == 1 second\n",
-    "winsound.Beep(frequency, duration)"
-   ],
-   "id": "148fcdc0c31a7e9",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "name = \"bert-3-classes-model\" # todo\n",
+    "name = \"bert-3-classes-model\"\n",
     "model_path = get_file_name(\"outputs\", name, current_time)"
    ],
    "id": "b8f7cdd600ae2700",
