--- a/model/sentiment_analysis.ipynb
+++ b/model/sentiment_analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "#### Varianta 1: sentiment pe textele in engleza",
+   "source": "#### Option 1: sentiment on English texts",
    "id": "b14185ce4ba16e77"
   },
   {
@@ -16,6 +16,8 @@
    "cell_type": "code",
    "source": [
     "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
+    "import torch\n",
+    "\n",
     "sentiment = SentimentIntensityAnalyzer()\n",
     "\n",
     "text_1 = \"By rejecting God, you are rejecting goodness, kindness, and love itself.\"\n",
@@ -47,7 +49,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "#### Varianta 2: sentiment pe textele in romana, dar..",
+   "source": "#### Option 2: sentiment on Romanian texts",
    "id": "c1e224d62d6ddfb0"
   },
   {
@@ -65,6 +67,7 @@
     "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
     "model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=3)\n",
     "\n",
+    "\n",
     "def analyze_sentiment(text):\n",
     "    inputs = tokenizer(text, return_tensors=\"pt\", truncation=True, padding=True)\n",
     "    with torch.no_grad():\n",
@@ -72,6 +75,7 @@
     "    sentiment = torch.argmax(logits).item()\n",
     "    labels = {0: \"Negative\", 1: \"Neutral\", 2: \"Positive\"}\n",
     "    return labels[sentiment]\n",
+    "\n",
     "\n",
     "text = \"Îmi place foarte mult acest film!\"\n",
     "print(analyze_sentiment(text))"
@@ -165,7 +169,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "#### Varianta 3: sentiment pe textele in romana, dar..\n",
+   "source": "#### Option 3: sentiment on Romanian texts\n",
    "id": "2f55d78230730c0e"
   },
   {
@@ -178,11 +182,11 @@
    "cell_type": "code",
    "source": [
     "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
-    "import torch\n",
     "\n",
     "model_name = \"dumitrescustefan/bert-base-romanian-uncased-v1\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
     "model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=3)\n",
+    "\n",
     "\n",
     "def analyze_sentiment(text):\n",
     "    inputs = tokenizer(text, return_tensors=\"pt\", truncation=True, padding=True)\n",
@@ -191,6 +195,7 @@
     "    sentiment = torch.argmax(logits).item()\n",
     "    labels = {0: \"Negative\", 1: \"Neutral\", 2: \"Positive\"}\n",
     "    return labels[sentiment]\n",
+    "\n",
     "\n",
     "text = \"Îmi place foarte mult acest film!\"\n",
     "print(analyze_sentiment(text))"
@@ -220,7 +225,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "#### Varianta 4: sentiment pe textele in romana, ro_sentiment, dar..\n",
+    "#### Option 4: sentiment on Romanian texts\n",
     " \n",
     "https://huggingface.co/readerbench/ro-sentiment\n",
     "Output labels:\n",
@@ -240,7 +245,6 @@
    "cell_type": "code",
    "source": [
     "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
-    "import torch\n",
     "\n",
     "model_name = \"readerbench/ro-sentiment\"\n",
     "\n",
@@ -250,12 +254,14 @@
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "model = model.to(device)\n",
     "\n",
+    "\n",
     "def sentiment(text):\n",
     "    \"\"\"Assess the sentiment of the input text.\"\"\"\n",
     "    inputs = tokenizer(text, return_tensors=\"pt\", truncation=True, padding=True).to(device)\n",
     "    with torch.no_grad():\n",
     "        logits = model(**inputs).logits.squeeze().cpu()\n",
     "    return logits.tolist()\n",
+    "\n",
     "\n",
     "# Example usage\n",
     "score = sentiment(\"Îmi place foarte mult acest film!\")\n",
@@ -369,7 +375,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### Varianta finala",
+   "source": "### Final version",
    "id": "773b2a226575b535"
   },
   {
@@ -388,6 +394,7 @@
     "\n",
     "analyzer = SentimentIntensityAnalyzer()\n",
     "\n",
+    "\n",
     "def get_sentiment(text):\n",
     "    if pd.isna(text):\n",
     "        print(\"There is a nan value\")\n",
@@ -398,6 +405,7 @@
     "        return \"negative\"\n",
     "    else:\n",
     "        return \"neutral\"\n",
+    "\n",
     "\n",
     "# Apply sentiment analysis to 'source_article'\n",
     "df['sentiment'] = df['source_article'].apply(get_sentiment)"
@@ -457,10 +465,7 @@
     }
    },
    "cell_type": "code",
-   "source": [
-    "import pandas as pd\n",
-    "data = pd.read_csv(\"../data/all/combined_lfud_huggingface_binary_sent.csv\")"
-   ],
+   "source": "data = pd.read_csv(\"../data/all/combined_lfud_huggingface_binary_sent.csv\")",
    "id": "5983aa5c7e27c6a7",
    "outputs": [],
    "execution_count": 4
@@ -492,14 +497,6 @@
     }
    ],
    "execution_count": 5
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "f0e6a22c7d9ee32e"
   }
  ],
  "metadata": {
