--- a/model/validation.ipynb
+++ b/model/validation.ipynb
@@ -1,28 +1,32 @@
 {
  "cells": [
   {
+   "metadata": {},
    "cell_type": "code",
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2025-04-26T08:13:30.751116Z",
-     "start_time": "2025-04-26T08:13:14.513432Z"
-    }
-   },
    "source": [
-    "from transformers import BertForSequenceClassification, BertTokenizerFast, pipeline\n",
-    "from utils.data_utils import read_data\n",
+    "from transformers import BertForSequenceClassification, BertTokenizerFast, pipeline, BertModel, BertTokenizer\n",
     "from sklearn.metrics import classification_report, accuracy_score, confusion_matrix\n",
     "import matplotlib.pyplot as plt\n",
+    "from utils.data_utils import read_data\n",
     "import seaborn as sns\n",
-    "\n",
-    "\n",
-    "# train_dataset, test_dataset, dev_dataset = read_data(\"../data/all/combined_lfud_huggingface_nonfallacies.csv\")\n",
-    "train_dataset, test_dataset, dev_dataset = read_data(\"../data/all/combined_lfud_huggingface_binary.csv\")"
+    "import numpy as np\n",
+    "from model.BERT import BertWithSentiment\n",
+    "import torch"
    ],
+   "id": "6cc27c6af092ff1d",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "train_dataset, test_dataset, dev_dataset = read_data(\"../data/all/combined_lfud_huggingface_nonfallacies.csv\")\n",
+    "# train_dataset, test_dataset, dev_dataset = read_data(\"../data/all/combined_lfud_huggingface_binary.csv\")"
+   ],
+   "id": "9b1deb954bc7a3bb",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -31,9 +35,8 @@
     "# model_path = \"../model/outputs/21-02-2025_14-45-55_bert-2-classes-model.pickle\" \n",
     "# model_path = \"../model/outputs/03-03-2025_16-23-08_bert-3-classes-model.pickle\"\n",
     "# model_path = \"../model/outputs/03-03-2025_16-46-39_bert-5-classes-model.pickle\" \n",
-    "# model_path = \"../model/outputs/20-02-2025_10-26-38_bert-all-classes-model.pickle\" \n",
-    "model_path = \"../model/outputs/29-03-2025_14-38-54_bert-3-classes-model.pickle\" \n",
-    "\n",
+    "model_path = \"../model/outputs/20-02-2025_10-26-38_bert-all-classes-model.pickle\"\n",
+    "# model_path = \"../model/outputs/29-03-2025_14-38-54_bert-3-classes-model.pickle\"\n",
     "\n",
     "model = BertForSequenceClassification.from_pretrained(model_path)\n",
     "tokenizer = BertTokenizerFast.from_pretrained(model_path)\n",
@@ -48,21 +51,15 @@
    "cell_type": "code",
    "source": [
     "# logical_fallacies = ['nonfallacy', 'fallacy']\n",
-    "logical_fallacies = ['nonfallacy', 'faulty generalization', 'intentional']\n",
+    "# logical_fallacies = ['nonfallacy', 'faulty generalization', 'intentional']\n",
     "# logical_fallacies = ['nonfallacy', 'faulty generalization', 'intentional', 'ad hominem', 'false causality']\n",
-    "# logical_fallacies = list(set(list(test_dataset['logical_fallacies'])))\n",
+    "logical_fallacies = list(set(list(test_dataset['logical_fallacies'])))\n",
     "filtered_test_data = test_dataset[test_dataset.logical_fallacies.isin(logical_fallacies)]\n",
     "filtered_test_data"
    ],
    "id": "221631a5c0bc223f",
    "outputs": [],
    "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "",
-   "id": "9edf5fd602a58b9f"
   },
   {
    "metadata": {},
@@ -85,12 +82,44 @@
    "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-04-26T13:26:12.294607Z",
-     "start_time": "2025-04-26T13:26:11.169499Z"
-    }
-   },
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "predictions = []\n",
+    "filtered_test_data = filtered_test_data[filtered_test_data.logical_fallacies.isin(['appeal to emotion'])]\n",
+    "for data in filtered_test_data[\"source_article_ro\"]:\n",
+    "    predictions.append((nlp(data)[0][\"label\"], data))"
+   ],
+   "id": "19a51fd0c9d8ea8f",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "\n",
+    "nlp(\"Această dezbatere – așa cum susțin pe larg în Watermelons – a fost întotdeauna despre ideologia de stânga, isteria cvasi-religioasă și corupția „urmărește banii”, niciodată despre „știință”.\")[\n",
+    "    0][\"label\"]"
+   ],
+   "id": "9ab024e3e87488b7",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "for i in range(len(predictions)):\n",
+    "    if predictions[i][0] != \"appeal to emotion\":\n",
+    "        print(predictions[i], i)"
+   ],
+   "id": "12c13ed9e4293421",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "report = classification_report(filtered_test_data[\"logical_fallacies\"], predictions)\n",
@@ -100,31 +129,17 @@
     "print(\"Classification Report:\\n\", report)"
    ],
    "id": "12e6c68e63c712c1",
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'filtered_test_data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[2], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01msklearn\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mmetrics\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m classification_report, accuracy_score, confusion_matrix\n\u001B[1;32m----> 2\u001B[0m report \u001B[38;5;241m=\u001B[39m classification_report(\u001B[43mfiltered_test_data\u001B[49m[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mlogical_fallacies\u001B[39m\u001B[38;5;124m\"\u001B[39m], predictions)\n\u001B[0;32m      3\u001B[0m accuracy \u001B[38;5;241m=\u001B[39m accuracy_score(filtered_test_data[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mlogical_fallacies\u001B[39m\u001B[38;5;124m\"\u001B[39m], predictions)\n\u001B[0;32m      5\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mAccuracy:\u001B[39m\u001B[38;5;124m\"\u001B[39m, accuracy)\n",
-      "\u001B[1;31mNameError\u001B[0m: name 'filtered_test_data' is not defined"
-     ]
-    }
-   ],
-   "execution_count": 2
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "import numpy as np\n",
-    "\n",
     "y_true = np.array(filtered_test_data[\"logical_fallacies\"])\n",
     "y_pred = np.array(predictions)\n",
     "\n",
-    "classes = np.unique(y_true) \n",
+    "classes = np.unique(y_true)\n",
     "\n",
     "for cls in classes:\n",
     "    cls_mask = (y_true == cls)\n",
@@ -168,231 +183,53 @@
    "id": "9f58c9e5807c9353"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-04-26T13:41:51.156838Z",
-     "start_time": "2025-04-26T13:41:51.072923Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
-    "from utils.data_utils import read_data\n",
+    "train_dataset, test_dataset, dev_dataset = read_data(\"../data/all/combined_lfud_huggingface_nonfallacies_sent.csv\",\n",
+    "                                                     sentiment=True)\n",
     "\n",
-    "train_dataset, test_dataset, dev_dataset = read_data(\"../data/all/combined_lfud_huggingface_nonfallacies_sent.csv\", sentiment = True)\n",
-    "\n",
-    "# logical_fallacies = ['nonfallacy', 'fallacy']\n",
+    "# logical_fallacies = ['fallacy', 'nonfallacy']\n",
     "# logical_fallacies = ['nonfallacy', 'faulty generalization', 'intentional']\n",
     "# logical_fallacies = ['nonfallacy', 'faulty generalization', 'intentional', 'ad hominem', 'false causality']\n",
-    "logical_fallacies = list(set(list(train_dataset['logical_fallacies'])))\n",
+    "logical_fallacies = ['faulty generalization',\n",
+    "                     'false dilemma',\n",
+    "                     'appeal to emotion',\n",
+    "                     'deductive fallacy',\n",
+    "                     'fallacy of extension',\n",
+    "                     'false causality',\n",
+    "                     'fallacy of relevance',\n",
+    "                     'intentional',\n",
+    "                     'ad hominem',\n",
+    "                     'circular reasoning',\n",
+    "                     'fallacy of credibility',\n",
+    "                     'ad populum',\n",
+    "                     'equivocation',\n",
+    "                     'nonfallacy',\n",
+    "                     'fallacy of logic']\n",
     "\n",
     "filtered_test_data = test_dataset[test_dataset.logical_fallacies.isin(logical_fallacies)]"
    ],
    "id": "b608d3edfacdfef4",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-04-26T13:41:52.748847Z",
-     "start_time": "2025-04-26T13:41:52.723362Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": "filtered_test_data",
    "id": "ffc0b98a4732bd8a",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "           logical_fallacies  \\\n",
-       "4279           false dilemma   \n",
-       "4280   faulty generalization   \n",
-       "4281         false causality   \n",
-       "4282        fallacy of logic   \n",
-       "4283  fallacy of credibility   \n",
-       "...                      ...   \n",
-       "5129    fallacy of relevance   \n",
-       "5130       appeal to emotion   \n",
-       "5131             intentional   \n",
-       "5132   faulty generalization   \n",
-       "5133           false dilemma   \n",
-       "\n",
-       "                                      source_article_ro sentiment  \n",
-       "4279             Dacă este știință, nu este un consens.   neutral  \n",
-       "4280  „Dacă nu obții un A la clasa domnului K, vei p...  negative  \n",
-       "4281  De fiecare dată când port acest colier, îmi pr...   neutral  \n",
-       "4282  Forarea carotelor de gheață arată că la 800 de...  positive  \n",
-       "4283  Nu este timpul să începem să ignorăm afirmații...  negative  \n",
-       "...                                                 ...       ...  \n",
-       "5129  O eroare logică care compară abaterile minore ...  negative  \n",
-       "5130                Este deja aici. Și se va înrăutăți.  negative  \n",
-       "5131  Poate cercetarea climatică să revină pe drumul...  negative  \n",
-       "5132  Toate cursurile universitare necesare sunt pli...  negative  \n",
-       "5133  Fie interzicem adolescenților să dețină telefo...  negative  \n",
-       "\n",
-       "[855 rows x 3 columns]"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>logical_fallacies</th>\n",
-       "      <th>source_article_ro</th>\n",
-       "      <th>sentiment</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>4279</th>\n",
-       "      <td>false dilemma</td>\n",
-       "      <td>Dacă este știință, nu este un consens.</td>\n",
-       "      <td>neutral</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4280</th>\n",
-       "      <td>faulty generalization</td>\n",
-       "      <td>„Dacă nu obții un A la clasa domnului K, vei p...</td>\n",
-       "      <td>negative</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4281</th>\n",
-       "      <td>false causality</td>\n",
-       "      <td>De fiecare dată când port acest colier, îmi pr...</td>\n",
-       "      <td>neutral</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4282</th>\n",
-       "      <td>fallacy of logic</td>\n",
-       "      <td>Forarea carotelor de gheață arată că la 800 de...</td>\n",
-       "      <td>positive</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4283</th>\n",
-       "      <td>fallacy of credibility</td>\n",
-       "      <td>Nu este timpul să începem să ignorăm afirmații...</td>\n",
-       "      <td>negative</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5129</th>\n",
-       "      <td>fallacy of relevance</td>\n",
-       "      <td>O eroare logică care compară abaterile minore ...</td>\n",
-       "      <td>negative</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5130</th>\n",
-       "      <td>appeal to emotion</td>\n",
-       "      <td>Este deja aici. Și se va înrăutăți.</td>\n",
-       "      <td>negative</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5131</th>\n",
-       "      <td>intentional</td>\n",
-       "      <td>Poate cercetarea climatică să revină pe drumul...</td>\n",
-       "      <td>negative</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5132</th>\n",
-       "      <td>faulty generalization</td>\n",
-       "      <td>Toate cursurile universitare necesare sunt pli...</td>\n",
-       "      <td>negative</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5133</th>\n",
-       "      <td>false dilemma</td>\n",
-       "      <td>Fie interzicem adolescenților să dețină telefo...</td>\n",
-       "      <td>negative</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>855 rows × 3 columns</p>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 13
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-04-26T13:41:56.007573Z",
-     "start_time": "2025-04-26T13:41:55.996628Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "from transformers import BertModel\n",
-    "import torch.nn as nn\n",
-    "\n",
-    "sentiment_mapping = {\"negative\": 0, \"neutral\": 1, \"positive\": 2}\n",
-    "\n",
-    "class BertWithSentiment(nn.Module):\n",
-    "    def __init__(self, model_name, num_labels, num_sentiment_classes=3):\n",
-    "        super(BertWithSentiment, self).__init__()\n",
-    "        self.bert = BertModel.from_pretrained(model_name, return_dict=True)  # Ensure return_dict=True\n",
-    "        self.sentiment_embedding = nn.Embedding(num_sentiment_classes, 768)\n",
-    "        self.dropout = nn.Dropout(0.3)\n",
-    "        self.classifier = nn.Linear(768 * 2, num_labels)\n",
-    "\n",
-    "    def forward(self, input_ids, attention_mask, sentiment, labels=None):\n",
-    "        bert_output = self.bert(input_ids=input_ids, attention_mask=attention_mask)\n",
-    "        cls_token_embedding = bert_output.last_hidden_state[:, 0, :]\n",
-    "        sentiment_embed = self.sentiment_embedding(sentiment)\n",
-    "        combined = torch.cat((cls_token_embedding, sentiment_embed), dim=1)\n",
-    "\n",
-    "        logits = self.classifier(self.dropout(combined))\n",
-    "\n",
-    "        loss = None\n",
-    "        if labels is not None:\n",
-    "            loss_fct = nn.CrossEntropyLoss()\n",
-    "            loss = loss_fct(logits, labels)  # Ensure labels are (batch_size,) with class indices\n",
-    "\n",
-    "        return {\"loss\": loss, \"logits\": logits} if loss is not None else {\"logits\": logits}"
-   ],
-   "id": "b64b4f0a085ae73b",
    "outputs": [],
-   "execution_count": 14
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2025-04-26T13:41:56.785760Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
-    "import torch\n",
-    "from transformers import BertTokenizer\n",
-    "\n",
     "# Load model\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "model_path = \"../model/outputs/outputs/model.pt\"\n",
-    "tokenizer_path = \"../model/outputs/outputs/tokenizer\"\n",
+    "model_path = \"/content/gdrive/MyDrive/model/outputs/model.pt\"\n",
+    "tokenizer_path = \"/content/gdrive/MyDrive/model/outputs/tokenizer\"\n",
     "\n",
     "model_name = \"dumitrescustefan/bert-base-romanian-uncased-v1\"\n",
     "\n",
@@ -414,11 +251,13 @@
     "# Define sentiment mapping\n",
     "sentiment_mapping = {\"negative\": 0, \"neutral\": 1, \"positive\": 2}\n",
     "\n",
+    "\n",
     "# Tokenize test data\n",
     "def tokenize_function(texts, sentiments, tokenizer):\n",
     "    inputs = tokenizer(texts, padding=True, truncation=True, max_length=512, return_tensors=\"pt\")\n",
     "    sentiment_ids = torch.tensor([sentiment_mapping[s] for s in sentiments])\n",
     "    return inputs, sentiment_ids\n",
+    "\n",
     "\n",
     "# Prepare dataset\n",
     "texts = filtered_test_data[\"source_article_ro\"].tolist()\n",
@@ -432,19 +271,25 @@
     "\n",
     "# Remove token_type_ids\n",
     "if \"token_type_ids\" in inputs:\n",
-    "    inputs.pop(\"token_type_ids\")\n",
-    "\n",
+    "    inputs.pop(\"token_type_ids\")\n"
+   ],
+   "id": "5472aa18229f79a7",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
     "# Run inference\n",
     "with torch.no_grad():\n",
     "    outputs = model(input_ids=inputs[\"input_ids\"], attention_mask=inputs[\"attention_mask\"], sentiment=sentiment_ids)\n",
     "    predictions = torch.argmax(outputs[\"logits\"], dim=1)\n",
     "\n",
     "# Convert predictions to labels\n",
-    "predicted_labels = [id2label[pred.item()] for pred in predictions]\n",
-    "\n",
-    "predicted_labels"
+    "predicted_labels = [id2label[pred.item()] for pred in predictions]"
    ],
-   "id": "5472aa18229f79a7",
+   "id": "d3106941e155e43f",
    "outputs": [],
    "execution_count": null
   },
@@ -489,9 +334,6 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
     "class_labels = sorted(logical_fallacies)  # Ensure consistent ordering\n",
     "\n",
     "cm = confusion_matrix(filtered_test_data[\"logical_fallacies\"], predicted_labels, labels=class_labels)\n",
@@ -506,14 +348,6 @@
    "id": "146bd4195b98882b",
    "outputs": [],
    "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "2982ed971a56787c"
   }
  ],
  "metadata": {
