--- a/model/bert_train.ipynb
+++ b/model/bert_train.ipynb
@@ -22,13 +22,11 @@
     "import wandb\n",
     "from torch import cuda\n",
     "from datetime import datetime\n",
-    "from transformers import pipeline\n",
-    "from utils.data_utils import read_data, filter_fallacies, encode_labels, plot_training_curve, get_file_name, \\\n",
-    "    plot_learning_curve\n",
-    "from transformers import BertForSequenceClassification\n",
-    "from transformers import TrainingArguments, Trainer\n",
     "from model.BERT import compute_metrics_wandb, DataLoader\n",
-    "from transformers import BertTokenizerFast, BertTokenizer"
+    "from transformers import pipeline, BertForSequenceClassification, BertTokenizerFast, BertTokenizer, TrainingArguments, \\\n",
+    "    Trainer, EarlyStoppingCallback\n",
+    "from utils.data_utils import read_data, filter_fallacies, encode_labels, plot_training_curve, get_file_name, \\\n",
+    "    plot_learning_curve"
    ],
    "outputs": [],
    "execution_count": null
@@ -422,8 +420,8 @@
     "    per_device_train_batch_size=config['model']['params']['train_batch_size'],\n",
     "    per_device_eval_batch_size=config['model']['params']['eval_batch_size'],\n",
     "    num_train_epochs=config['model']['params']['epochs'],\n",
-    "    weight_decay=0.01,\n",
-    "    max_grad_norm=1.0,\n",
+    "    weight_decay=0.1,\n",
+    "    max_grad_norm=1.0,  # Prevents gradient explosion\n",
     "    log_level=\"warning\",\n",
     "    load_best_model_at_end=True\n",
     ")\n",
@@ -433,7 +431,8 @@
     "    args=training_args,\n",
     "    train_dataset=train_dataloader,\n",
     "    eval_dataset=dev_dataloader,\n",
-    "    compute_metrics=compute_metrics_wandb\n",
+    "    compute_metrics=compute_metrics_wandb,\n",
+    "    callbacks=[EarlyStoppingCallback(early_stopping_patience=3)]  # evaluation loss\n",
     ")"
    ],
    "id": "3855db72cc01b30a",
