--- a/model/bert_train_sentiment.ipynb
+++ b/model/bert_train_sentiment.ipynb
@@ -11,13 +11,12 @@
     "import yaml\n",
     "import wandb\n",
     "import torch\n",
+    "from torch import cuda\n",
     "from datetime import datetime\n",
     "from utils.data_utils import read_data, filter_fallacies, encode_labels_sentiment, plot_training_curve, \\\n",
     "    plot_learning_curve\n",
     "from model.BERT import compute_metrics_wandb, DataLoader\n",
-    "from torch import cuda\n",
-    "from transformers import TrainingArguments, Trainer\n",
-    "from transformers import BertTokenizer, EarlyStoppingCallback"
+    "from transformers import BertTokenizer, TrainingArguments, Trainer, EarlyStoppingCallback"
    ],
    "outputs": [],
    "execution_count": null
