--- a/model/model_explainability.ipynb
+++ b/model/model_explainability.ipynb
@@ -265,24 +265,32 @@
     "        for s, p in zip(sentiments, probs):\n",
     "            print(f\"Sentiment: {s} => Prediction: {p}\")\n",
     "\n",
+    "        # Create the figure and axis\n",
+    "        fig, ax = plt.subplots()\n",
+    "\n",
     "        # Plot impact\n",
     "        for i in range(probs.shape[1]):\n",
-    "            plt.plot(sentiments, probs[:, i], label=f'Class {i}', marker='o')\n",
+    "            ax.plot(sentiments, probs[:, i], label=f'Class {i}', marker='o')\n",
     "\n",
-    "        plt.title(\"Effect of Sentiment on Prediction\")\n",
-    "        plt.ylabel(\"Probability\")\n",
-    "        plt.xlabel(\"Sentiment\")\n",
-    "        plt.legend()\n",
+    "        ax.set_title(\"Effect of Sentiment on Prediction\")\n",
+    "        ax.set_ylabel(\"Probability\")\n",
+    "        ax.set_xlabel(\"Sentiment\")\n",
+    "\n",
+    "        # Place legend outside the plot on the right\n",
+    "        ax.legend(loc='center left', bbox_to_anchor=(1.02, 0.5), borderaxespad=0)\n",
     "\n",
     "        # Annotate predictions on the plot\n",
     "        for i, sentiment in enumerate(sentiments):\n",
     "            for j in range(probs.shape[1]):\n",
-    "                plt.text(i, probs[i, j] + 0.02, f\"{probs[i, j]:.2f}\",\n",
-    "                         ha='center', va='bottom', fontsize=8)\n",
+    "                ax.text(i, probs[i, j] + 0.02, f\"{probs[i, j]:.2f}\",\n",
+    "                        ha='center', va='bottom', fontsize=8)\n",
+    "\n",
+    "        # Adjust layout to accommodate the legend\n",
+    "        plt.tight_layout(rect=[0, 0, 0.85, 1])  # leave space on the right\n",
     "\n",
     "        # Save the figure\n",
-    "        plt.tight_layout()\n",
-    "        plt.savefig(fig_file)\n",
+    "        fig_file = \"sentiment_impact.png\"  # Make sure fig_file is defined\n",
+    "        plt.savefig(fig_file, bbox_inches='tight')\n",
     "        plt.show()\n",
     "\n",
     "    def get_sentiment_contribution(text, sentiment_label):\n",
