--- a/model/validation.ipynb
+++ b/model/validation.ipynb
@@ -20,10 +20,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": [
-    "train_dataset, test_dataset, dev_dataset = read_data(\"../data/all/combined_lfud_huggingface_nonfallacies.csv\")\n",
-    "# train_dataset, test_dataset, dev_dataset = read_data(\"../data/all/combined_lfud_huggingface_binary.csv\")"
-   ],
+   "source": "train_dataset, test_dataset, dev_dataset = read_data(\"../data/all/combined_lfud_huggingface_nonfallacies.csv\")",
    "id": "9b1deb954bc7a3bb",
    "outputs": [],
    "execution_count": null
@@ -32,11 +29,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "# model_path = \"../model/outputs/21-02-2025_14-45-55_bert-2-classes-model.pickle\" \n",
-    "# model_path = \"../model/outputs/03-03-2025_16-23-08_bert-3-classes-model.pickle\"\n",
-    "# model_path = \"../model/outputs/03-03-2025_16-46-39_bert-5-classes-model.pickle\" \n",
-    "model_path = \"../model/outputs/20-02-2025_10-26-38_bert-all-classes-model.pickle\"\n",
-    "# model_path = \"../model/outputs/29-03-2025_14-38-54_bert-3-classes-model.pickle\"\n",
+    "model_path = \"../model/outputs/10-06-2025_11-05-02_distilbert-5-classes-model.pickle\"\n",
     "\n",
     "model = BertForSequenceClassification.from_pretrained(model_path)\n",
     "tokenizer = BertTokenizerFast.from_pretrained(model_path)\n",
@@ -50,10 +43,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "# logical_fallacies = ['nonfallacy', 'fallacy']\n",
-    "# logical_fallacies = ['nonfallacy', 'faulty generalization', 'intentional']\n",
-    "# logical_fallacies = ['nonfallacy', 'faulty generalization', 'intentional', 'ad hominem', 'false causality']\n",
-    "logical_fallacies = list(set(list(test_dataset['logical_fallacies'])))\n",
+    "logical_fallacies = ['nonfallacy', 'faulty generalization', 'intentional', 'ad hominem', 'false causality']\n",
     "filtered_test_data = test_dataset[test_dataset.logical_fallacies.isin(logical_fallacies)]\n",
     "filtered_test_data"
    ],
@@ -66,6 +56,14 @@
    "cell_type": "code",
    "source": "filtered_test_data[\"logical_fallacies\"].value_counts()",
    "id": "99a4d0bdcf1bcddd",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "filtered_test_data.shape",
+   "id": "f988311fce7def52",
    "outputs": [],
    "execution_count": null
   },
@@ -85,36 +83,11 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "predictions = []\n",
-    "filtered_test_data = filtered_test_data[filtered_test_data.logical_fallacies.isin(['appeal to emotion'])]\n",
-    "for data in filtered_test_data[\"source_article_ro\"]:\n",
-    "    predictions.append((nlp(data)[0][\"label\"], data))"
-   ],
-   "id": "19a51fd0c9d8ea8f",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
     "\n",
     "nlp(\"Această dezbatere – așa cum susțin pe larg în Watermelons – a fost întotdeauna despre ideologia de stânga, isteria cvasi-religioasă și corupția „urmărește banii”, niciodată despre „știință”.\")[\n",
     "    0][\"label\"]"
    ],
    "id": "9ab024e3e87488b7",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "for i in range(len(predictions)):\n",
-    "    if predictions[i][0] != \"appeal to emotion\":\n",
-    "        print(predictions[i], i)"
-   ],
-   "id": "12c13ed9e4293421",
    "outputs": [],
    "execution_count": null
   },
@@ -189,9 +162,6 @@
     "train_dataset, test_dataset, dev_dataset = read_data(\"../data/all/combined_lfud_huggingface_nonfallacies_sent.csv\",\n",
     "                                                     sentiment=True)\n",
     "\n",
-    "# logical_fallacies = ['fallacy', 'nonfallacy']\n",
-    "# logical_fallacies = ['nonfallacy', 'faulty generalization', 'intentional']\n",
-    "# logical_fallacies = ['nonfallacy', 'faulty generalization', 'intentional', 'ad hominem', 'false causality']\n",
     "logical_fallacies = ['faulty generalization',\n",
     "                     'false dilemma',\n",
     "                     'appeal to emotion',\n",
@@ -226,15 +196,13 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "# Load model\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "model_path = \"/content/gdrive/MyDrive/model/outputs/model.pt\"\n",
     "tokenizer_path = \"/content/gdrive/MyDrive/model/outputs/tokenizer\"\n",
     "\n",
     "model_name = \"dumitrescustefan/bert-base-romanian-uncased-v1\"\n",
     "\n",
-    "# Get number of labels (you must know your training labels)\n",
-    "# logical_fallacies = list(set(list(filtered_test_data['logical_fallacies'])))\n",
+    "# Get number of labels \n",
     "label2id = {label: id for id, label in enumerate(logical_fallacies)}\n",
     "id2label = {v: k for k, v in label2id.items()}\n",
     "num_labels = len(label2id)\n",
@@ -245,26 +213,21 @@
     "model.to(device)\n",
     "model.eval()\n",
     "\n",
-    "# Load tokenizer\n",
     "tokenizer = BertTokenizer.from_pretrained(tokenizer_path)\n",
     "\n",
-    "# Define sentiment mapping\n",
     "sentiment_mapping = {\"negative\": 0, \"neutral\": 1, \"positive\": 2}\n",
     "\n",
     "\n",
-    "# Tokenize test data\n",
     "def tokenize_function(texts, sentiments, tokenizer):\n",
     "    inputs = tokenizer(texts, padding=True, truncation=True, max_length=512, return_tensors=\"pt\")\n",
     "    sentiment_ids = torch.tensor([sentiment_mapping[s] for s in sentiments])\n",
     "    return inputs, sentiment_ids\n",
     "\n",
     "\n",
-    "# Prepare dataset\n",
     "texts = filtered_test_data[\"source_article_ro\"].tolist()\n",
     "sentiments = filtered_test_data[\"sentiment\"].tolist()\n",
     "labels = filtered_test_data[\"logical_fallacies\"].tolist()  # Optional\n",
     "\n",
-    "# Tokenize\n",
     "inputs, sentiment_ids = tokenize_function(texts, sentiments, tokenizer)\n",
     "inputs = {key: val.to(device) for key, val in inputs.items()}\n",
     "sentiment_ids = sentiment_ids.to(device)\n",
