--- a/model/validation.ipynb
+++ b/model/validation.ipynb
@@ -197,8 +197,8 @@
    "cell_type": "code",
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "model_path = \"/content/gdrive/MyDrive/model/outputs/model.pt\"\n",
-    "tokenizer_path = \"/content/gdrive/MyDrive/model/outputs/tokenizer\"\n",
+    "model_path = \"../model/outputs/experiment-3_3_sent_15_classes/outputs/model.pt\"\n",
+    "tokenizer_path = \"../model/outputs/experiment-3_3_sent_15_classes/outputs/tokenizer\"\n",
     "\n",
     "model_name = \"dumitrescustefan/bert-base-romanian-uncased-v1\"\n",
     "\n",
